// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextListItem should render with a checkbox if the checkbox prop is provided 1`] = `
<DocumentFragment>
  <div
    class="ods-text-list-item-selectable"
  >
    <div
      class="ods-checkbox__root-container"
    >
      <label
        class="ods-checkbox__root"
      >
        <input
          class="ods-checkbox"
          type="checkbox"
        />
        <span
          class="ods-checkbox__checkmark"
        />
        <span
          class="ods-typography ods-typography__description ods-checkbox__label"
        >
          <button
            class="ods-text-list-item--button"
            type="button"
          >
            <div
              class="ods-text-list-item ods-text-list-item--selectable"
            >
              <div
                class="ods-text-list-item__default-content"
              >
                <p
                  class="ods-typography ods-typography__paragraph"
                >
                  Sample Title
                </p>
                <p
                  class="ods-typography ods-typography__description"
                >
                  Sample Description
                </p>
              </div>
            </div>
          </button>
        </span>
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextListItem should render with a radio if the radio prop is provided 1`] = `
<DocumentFragment>
  <div
    class="ods-text-list-item-selectable"
  >
    <label
      class="ods-radio__root"
    >
      <input
        checked=""
        class="ods-radio"
        type="radio"
      />
      <span
        class="ods-radio__checkmark"
      />
      <span
        class="ods-typography ods-typography__description ods-radio__label"
      >
        <button
          class="ods-text-list-item--button"
          type="button"
        >
          <div
            class="ods-text-list-item ods-text-list-item--selectable"
          >
            <div
              class="ods-text-list-item__default-content"
            >
              <p
                class="ods-typography ods-typography__paragraph"
              >
                Sample Title
              </p>
              <p
                class="ods-typography ods-typography__description"
              >
                Sample Description
              </p>
            </div>
          </div>
        </button>
      </span>
    </label>
  </div>
</DocumentFragment>
`;

exports[`TextListItem should render with action and match snapshot 1`] = `
<DocumentFragment>
  <button
    class="ods-text-list-item--button"
    type="button"
  >
    <div
      class="ods-text-list-item ods-text-list-item--with-action"
    >
      <div
        class="ods-text-list-item__default-content"
      >
        <p
          class="ods-typography ods-typography__paragraph"
        >
          Sample Title
        </p>
        <p
          class="ods-typography ods-typography__description"
        >
          Sample Description
        </p>
        <p
          class="ods-typography ods-typography__captionbold"
        >
          Sample Caption
        </p>
      </div>
      <svg
        fill="currentColor"
        height="24"
        viewBox="0 0 20 20"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M7.293 14.707a1 1 0 0 1 0-1.414L10.586 10 7.293 6.707a1 1 0 0 1 1.414-1.414l4 4a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414 0z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
</DocumentFragment>
`;

exports[`TextListItem should render with info text and match snapshot 1`] = `
<DocumentFragment>
  <button
    class="ods-text-list-item--button"
    type="button"
  >
    <div
      class="ods-text-list-item"
    >
      <div
        class="ods-text-list-item__default-content"
      >
        <p
          class="ods-typography ods-typography__paragraph"
        >
          Sample Title
        </p>
        <p
          class="ods-typography ods-typography__description"
        >
          Sample Description
        </p>
      </div>
      <p
        class="ods-typography ods-typography__description ods-text-list-item__info-text ods-text-list-item__info-text--neutral"
      >
        Info Text
      </p>
    </div>
  </button>
</DocumentFragment>
`;
